# emgsd-hermes

./: .gitignore  Model performance tests.ipynb  README.md  compare.py  compare_all.py  draw_corr.py  empsd.py  mi_stereo.py  pyproject.toml  search_category.py  search_stereo.py
emgsd/: category_corr_finetune.json  stereotype_corr_finetune.json
empsd/: category_corr_pretrain.json  feature_label_mutual_info.json  stereotype_corr_pretrain.json
