[tool.poetry]
name = "emgsd-hermes"
version = "0.1.0"
description = "Analyze EMGSD models using Sparse AutoEncoder"
authors = ["seonglae <sungle3737@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.10,<4.0"
transformers = "^4.45.2"
torch = { version = "^2.4.1" }
xformers = { version = "^0.0.28" }
transformer-lens = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
